clean up, not all files are needed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         transform: translate(-50%, -50%);
       }
     </style>
-    <script defer src="/node_modules/face-api.js/dist/face-api.min.js"></script>
+    <script defer src="face-api.min.js"></script>
     <script defer src="script.js"></script>
     <title>ai face detection</title>
   </head>
